syntax = "proto3";
package pb;

enum ErrCode {
    SUCCESS     = 0;
    PARAM_ERROR = 1;
}